--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   <script src="https://kit.fontawesome.com/6340a0a222.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="./img/favicon-32x32.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="./img/favicon-32x32.png" sizes="16x16">
 
   <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
