--- a/index.html
+++ b/index.html
@@ -208,8 +208,11 @@
   <div class="copi">
     <h3>Copiright © 2020; All Rights reserved  | </h3>
 
-    <h3  class="diego"><a class="diego" href="https://github.com/webdiego">die<span class="o">g</span>o massarini<img class="planet" src="./img/pl.png" alt=""></a>
-    </h3>
+   <a href="https://www.linkedin.com/in/diego-massarini-6569651ab/">
+   
+    <img class="pizza" src="./img/pizza.png" alt="">
+  </a> 
+  
   </div>
 
  
