pastry-chef / speed implement

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
       <div class="main__landscape-header">
         <h1 class="heading-primary heading-primary-main">Martina Colombo</h1>
-        <h2 class="heading-secondary">Passionate Pastry Cook</h2>
+        <h2 class="heading-secondary">Passionate Pastry Chef</h2>
       </div>
 
     </div>
@@ -58,7 +58,7 @@
     <div class="presentation__header">
 
       <h3 class="heading-tertiary"> More sugar please!</h3>
-      <p>Passionate <a href="./img/Martina Colombo.pdf" class="pastry"> pastry cook </a>  from Italy and currently based in Sydney who loves travel and discover the food culture of every country.
+      <p>Passionate <a href="./img/Martina Colombo.pdf" class="pastry"> pastry chef </a>  from Italy and currently based in Sydney who loves travel and discover the food culture of every country.
         My goal is to improve my profession, learning new techniques and new ways to work.</p>
     </div>
   </div>
@@ -112,10 +112,10 @@
 
         <div class="book__jobs-list">
           
-          <img class="book__jobs-img" src="./img/logo-farini.png" alt="">
+          <img class="book__jobs-img" src="./img/black-pastry.png" alt="">
           <div class="book__jobs-clipcard">
               <h4 class="book__jobs-company">
-                  Farini
+                  Black Star Pastry
               </h4>
               <p class="book__jobs-description">Bakery</p>
           </div>
