--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
  
   <link rel="stylesheet" href="./css/main.css">
-  <title>Martina Colombo Pastry Cook</title>
+  <title>Martina Colombo Pastry Chef</title>
 </head>
 <body>
   <div class="main">
