--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <div class="copi">
     <h3>Copiright © 2020; All Rights reserved  | </h3>
 
-   <a href="https://www.linkedin.com/in/diego-massarini-6569651ab/">
+   <a href="https://diego-slicecode.dev/">
    
     <img class="pizza" src="./img/pizza.png" alt="">
   </a> 
